--- a/nginx.conf
+++ b/nginx.conf
@@ -6,72 +6,115 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # 日誌
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    # 日誌格式
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # 性能優化
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
+    # 效能優化
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
-    # Gzip 壓縮
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss;
-
     server {
         listen 80;
         server_name localhost;
+        
+        root /usr/share/nginx/html;
+        index index.html;
 
-        # 前端靜態檔案
+        # ==================== 靜態檔案 ====================
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ =404;
         }
 
-        # API 反向代理
-        location /api/ {
-            proxy_pass http://rag_api:8000/api/;
+        # ==================== 民眾問答 API ====================
+        
+        # 聊天 API
+        location /api/chat {
+            proxy_pass http://public_api:8000/api/chat;
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-            
-            # 超時設定
-            proxy_connect_timeout 300;
-            proxy_send_timeout 300;
-            proxy_read_timeout 300;
+            proxy_read_timeout 300s;
+        }
+
+        # 記憶 API
+        location /api/memory {
+            proxy_pass http://public_api:8000/api/memory;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # 統計 API
+        location /api/stats {
+            proxy_pass http://public_api:8000/api/stats;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
 
         # 健康檢查
-        location /health {
-            proxy_pass http://rag_api:8000/health;
-            access_log off;
-        }
-
-        # API 文件（Swagger）
-        location /docs {
-            proxy_pass http://rag_api:8000/docs;
+        location /api/health {
+            proxy_pass http://public_api:8000/health;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
         }
 
-        # 錯誤頁面
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-            root /usr/share/nginx/html;
+        # ==================== 幕僚系統 API ====================
+        
+        # 知識庫管理 (admin 功能但屬於 staff 系統)
+        location /api/upload {
+            proxy_pass http://public_api:8000/api/upload;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            client_max_body_size 50M;
+            proxy_read_timeout 300s;
+        }
+
+        location /api/ingest {
+            proxy_pass http://public_api:8000/api/ingest;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_read_timeout 600s;
+        }
+
+        location /api/documents {
+            proxy_pass http://public_api:8000/api/documents;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # 幕僚系統 - 文案生成相關 API
+        location /api/staff/ {
+            proxy_pass http://staff_api:8001/api/staff/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            client_max_body_size 100M;
+            proxy_read_timeout 600s;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;
+        }
+
+        # 幕僚系統健康檢查
+        location /api/staff-health {
+            proxy_pass http://staff_api:8001/health;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
         }
     }
 }
