--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,11 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
+    keepalive_timeout 3600; # 增加 Keepalive
     types_hash_max_size 2048;
+
+    # 增加上傳大小限制 (全域)
+    client_max_body_size 200M;
 
     server {
         listen 80;
@@ -27,6 +30,13 @@ http {
         
         root /usr/share/nginx/html;
         index index.html;
+
+        # 增加 Timeouts (全域)
+        proxy_connect_timeout 3600s;
+        proxy_send_timeout 3600s;
+        proxy_read_timeout 3600s;
+        fastcgi_send_timeout 3600s;
+        fastcgi_read_timeout 3600s;
 
         # ==================== 靜態檔案 ====================
 
@@ -61,7 +71,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_read_timeout 300s;
+            proxy_read_timeout 3600s; # 增加超時
         }
 
         # 記憶 API
@@ -97,24 +107,24 @@ http {
 
         # ==================== 幕僚系統 API ====================
 
-        # 媒體素材上傳 (音頻、圖片) - 短影音生成用
+        # 媒體素材上傳
         location /api/upload {
             proxy_pass http://staff_api:8001/api/upload;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            client_max_body_size 100M;
-            proxy_read_timeout 300s;
+            client_max_body_size 200M;
+            proxy_read_timeout 3600s; # 增加超時
         }
 
-        # 政務文檔上傳 - 加入知識庫
+        # 政務文檔上傳
         location /api/documents/upload {
             proxy_pass http://public_api:8000/api/upload;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            client_max_body_size 100M;
-            proxy_read_timeout 300s;
+            client_max_body_size 200M;
+            proxy_read_timeout 3600s;
         }
 
         location /api/ingest {
@@ -122,7 +132,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_read_timeout 600s;
+            proxy_read_timeout 3600s;
         }
 
         location /api/documents {
@@ -132,7 +142,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # 幕僚系統 - 文案生成相關 API
+        # 幕僚系統 - 文案生成相關 API (關鍵！)
         location /api/staff/ {
             proxy_pass http://staff_api:8001/api/staff/;
             proxy_http_version 1.1;
@@ -140,10 +150,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            client_max_body_size 100M;
-            proxy_read_timeout 600s;
-            proxy_connect_timeout 60s;
-            proxy_send_timeout 600s;
+            client_max_body_size 200M;
+            proxy_read_timeout 3600s; # 增加超時到 1 小時
+            proxy_connect_timeout 3600s;
+            proxy_send_timeout 3600s;
         }
 
         # 幕僚系統健康檢查
